--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -31,7 +31,7 @@ Given folders path(s) and/or github repo(s), compute a *citations network* of th
 ```{r construct-corpus-and-network, eval = F, echo=TRUE}
 require(codexplor)
 net <- get_doc_network_from_project(
-  repos =  c("tidyverse/stringr"))
+  repos =  "tidyverse/stringr")
         # by default, codexplor deal with R project
 
 get_networkd3_from_igraph(net$internal.dependencies)
@@ -43,7 +43,7 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 
 ![.](../man/figures/example_net3d_dataviz.png){width=90%}
 
-For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is reported as a 'trivial' level (see next section).
+For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` and `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is reported as a 'trivial' level (see next section).
 
 Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the files that contain high-level functions of the project.
 
